almost finished rooms page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -44,6 +44,7 @@
     
     <div class="footer-bottom">
       <p>&copy; 2026 Shelly Beach Villa. All rights reserved.</p>
+      <p>Designed by MoiHanatech.com</p>
     </div>
   </div>
 </footer>
