--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -19,7 +19,7 @@ const { title, description = 'オークランドの快適な宿泊施設 - Shell
   <meta name="description" content={description}>
   <title>Shelly Beach Villa</title>
     <!-- Favicon -->
-  <link rel="icon" type="image/png" href="../favicon.png">
+  <link rel="icon" type="image/png" href="/public/favicon.png">
     <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
